tests/route/invalid_examples/invalid_http_method.rs
use infra_builder::route;
use lambda_http::Error;

#[tokio::main]
#[route(FOO, "/")]
async fn main() -> Result<(), Error> {
    Ok(())
}
